--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Home | SSB-456__class-5__03 June,2022</title>
+    <title>HTML Elements</title>
 
 </head>
 <body>
@@ -152,7 +152,6 @@
             <p>Create an image area map code <a href="https://www.image-maps.com/" target="_blank">click here.</a></p> 
             <br>
             <img src="img/pink_flower2.jpg" usemap="#workmap" alt="">
-            <img src="img/laptop.jpg" usemap="#workmap" alt="" width="360">
             <map name="workmap">
                 <area alt="pink_flower" title="pink_flower"
                     href="https://i.pinimg.com/564x/f3/a9/6f/f3a96f0564754e45c786f5eb15a01ef9.jpg" shape="poly"
